<resources>
    <string name="app_name">finalhw</string>
    <string name="button">進去看看所有功能></string>
    <string name="app">這是一款適合你的APP</string>
    <string name="textview">TextView</string>
    <string name="text2">我第二頁喇</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview2">Home</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="textview3">Detail</string>
    <string name="tv2">帳號:</string>
    <string name="editaccount" />
    <string name="tvlogin">在此顯示是否註冊成功!!!</string>
    <string name="tv3">密碼:</string>
    <string name="btn_ok">確定</string>
    <string name="btn_clean">清除</string>
    <string name="tv1">下面輸入資料喔</string>
    <string name="btn_beiwang">看看你今天又忘了什麼</string>
    <string name="btn_1">最喜歡的照片</string>
    <string name="btn_2">Button</string>
    <string name="btn_eat">今晚吃什麼??????</string>
    <string name="btn_member">跟會員有關的東東</string>
    <string name="textviewtitle">TextView</string>
    <string name="string_textviewtitle">title</string>
    <string name="btn_edit">換</string>
    <string name="tv_tume">time</string>
    <string name="urapp">這是一款適合您的APP</string>
    <string name="btn_add">ADD</string>
    <string name="btn_clear">Clean</string>
    <string name="what_u_want_to_do">What u want to do</string>
    <string name="tvdeadline">deadline</string>
    <string name="btn_claer">Button</string>
    <string name="btn_camera">打開相機</string>
    <string name="btn_photo">打開相簿</string>
    <string name="todo">TODO</string>
    <string name="zui">註冊</string>
    <string name="tv_yn">顯示是否註冊成功</string>
    <string name="btn_reok">確定</string>
    <string name="tv_pw">密碼</string>
    <string name="tv_account">帳號　　</string>
    <string name="btn_change">回去目錄</string>
    <string name="btn_loginok">確定</string>
    <string name="tv_login">登入</string>
    <string name="tv_yn2">顯示是否登入成功</string>
    <string name="btn_reclean">清除</string>
    <string name="tvaccount">帳號　　</string>
    <string name="tvpw">密碼</string>
    <string name="hint1">XXX@yahoo.com.tw</string>
    <string name="loginnn">尚未登入ㄛ</string>
    <!--    <string name="todo">TODO</string>-->
</resources>