<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bconclick"
        android:text="@string/btn_clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="365dp"
        android:layout_height="503dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binsert2"
        app:layout_constraintVertical_bias="0.257" />

    <Button
        android:id="@+id/binsert2"
        android:layout_width="376dp"
        android:layout_height="58dp"
        android:onClick="bionclick"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_do"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/ed_dead"
        android:layout_width="94dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/tvdeadline"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/binsert2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/ed_do"
        android:layout_width="263dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/what_u_want_to_do"
        android:inputType="textPersonName"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />
</androidx.constraintlayout.widget.ConstraintLayout>